--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "purescript-graphql",
-  "version": "1.0.0-rc1",
+  "version": "1.0.1",
   "license": "MIT",
   "ignore": [
     "**/.*",
