Remove graphql-js dependency
GraphQL.js will no longer be used to run queries. After getting rid of
all the foreign modules we also no longer need the npm library
installed.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "doc": "docs",
     "example": "example"
   },
-  "dependencies": {
-    "graphql": "^0.13.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "docsify-cli": "^4.3.0"
   },
